; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_object.c_dereference_object.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_object.c_dereference_object.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_EPEEL = common dso_local global i32 0, align 4
@GIT_EINVALIDSPEC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32**, i32*)* @dereference_object to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dereference_object(i32** %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32**, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i32** %0, i32*** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load i32*, i32** %5, align 8
  %8 = call i32 @git_object_type(i32* %7)
  store i32 %8, i32* %6, align 4
  %9 = load i32, i32* %6, align 4
  switch i32 %9, label %20 [
    i32 130, label %10
    i32 129, label %14
    i32 131, label %18
    i32 128, label %18
  ]

10:                                               ; preds = %2
  %11 = load i32**, i32*** %4, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @git_commit_tree(i32** %11, i32* %12)
  store i32 %13, i32* %3, align 4
  br label %22

14:                                               ; preds = %2
  %15 = load i32**, i32*** %4, align 8
  %16 = load i32*, i32** %5, align 8
  %17 = call i32 @git_tag_target(i32** %15, i32* %16)
  store i32 %17, i32* %3, align 4
  br label %22

18:                                               ; preds = %2, %2
  %19 = load i32, i32* @GIT_EPEEL, align 4
  store i32 %19, i32* %3, align 4
  br label %22

20:                                               ; preds = %2
  %21 = load i32, i32* @GIT_EINVALIDSPEC, align 4
  store i32 %21, i32* %3, align 4
  br label %22

22:                                               ; preds = %20, %18, %14, %10
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i32 @git_object_type(i32*) #1

declare dso_local i32 @git_commit_tree(i32**, i32*) #1

declare dso_local i32 @git_tag_target(i32**, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
